# codchi

./: .envrc  .gitignore  .gitlab-ci.yml  200.html  404.html  CHANGELOG.md  CNAME  IDEA.md  LICENSE  README.md  __studio.json  _payload.json  configuration.nix  editor.nix  flake.nix  index.html
.github/workflows/: build-windows.yml  build.yml  conventional-commits.yml  nix-cache.yml  nix.yml  pages.yml  stale.yml  test.yml  tests.yml  tests.yml.disabled  website.yml  website.yml.disabled  windows.yml  windows.yml.disabled
.old/controller/: ctrl-rootfs.nix  default.nix
_nuxt/: 5p9NB_Nh.js  6fv32nPZ.js  8nh4wlLx.js  B1hajbAO.js  BBjXNLA4.js  BIWC5JIl.js  BIg1MioU.js  BL0CwNe6.js  BRQB72RX.js  BSzq_fvC.js  BXRb9uJd.js  BbprOH1f.js  BdewJsFB.js  BeCyIPxK.js  BiXDexJ0.js  BigJZ48M.js  Bit_kXv-.js  BjdvheTs.js  Bl5zHkKu.js  BlHuGk4J.js  Bpof3fWQ.js  Bq0Kq6pF.js  BtfJxVVX.js  Bv3UtUxS.js  BxugV-po.js  C-xo5m29.js  C0IIocEA.js  C0bZAuN3.js  C2g7Fxw1.js  C6fBY98B.js  CA918c7O.js  CBazAnrO.js  CGABTGDU.js  CK21sRIF.js  CK2HWDzU.js  CK9m3yHS.js  CLmbEHsB.js  CN-jw1Zk.js  CNH9-sTi.js  CPKH9IZD.js  (+55 more)
_nuxt/builds/: latest.json
api/: search
api/_content/: cache.1733476251719.json  cache.1733478228556.json  cache.1733480941461.json  cache.1733731601897.json  cache.1733933826071.json  cache.1733935177102.json  cache.1734440598671.json  cache.1734514605039.json  cache.1734516260481.json  (+15 more)
cli/: .ghcid  .stylish-haskell.yaml  CHANGELOG.md  Codchi.hs  LICENSE  cabal.project  codchi.cabal  devenv.cabal
cli/Codchi/: CLI.hs  Config.hs  Dsl.hs  Effects.hs  Nix.hs  Parser.hs  Types.hs
cli/Codchi/Platform/: Linux.hs  Windows.hs
cli/app/: Main.hs
cli/src/: Codchi.hs  Devenv.hs  Dsl.hs  Linux.hs  Main.hs  Parser.hs  Types.hs  Util.hs  Windows.hs
cli/src/Codchi/: CLI.hs  Config.hs  Error.hs  Nix.hs  Platform.hs
cli/src/Codchi/Config/: Common.hs  IO.hs  V012.hs
cli/src/Codchi/Platform/: CodchiMonad.hs  Linux.hs  Windows.hs
cli/test/Config/: v012.json
codchi/: .gitignore  Cargo.toml  build.rs  codchi  default.nix  mod.nu  shell.nix
codchi/cli/: Cargo.toml  build.rs
codchi/cli/src/: cli.rs  config.rs  consts.rs  main.rs  module.rs  util.rs
codchi/cli/src/config/: codchi.rs  flake.rs  machine.rs  mod.rs
codchi/cli/src/logging/: mod.rs  nix.rs  progress.rs
codchi/cli/src/platform/: cmd.rs  host.rs  machine.rs  mod.rs  store.rs
codchi/cli/src/platform/cmd/: linux.rs  mod.rs  nix.rs
codchi/cli/src/platform/linux/: host.rs  lxd.rs  mod.rs
codchi/cli/src/platform/windows/: host.rs  mod.rs  util.rs  wsl.rs
codchi/native/: Cargo.toml  default.nix
codchi/native/src/: hello.rs
codchi/src/: cli.rs  config.rs  consts.rs  controller.rs  data.rs  main.rs  module.rs  secrets.rs  util.rs
codchi/src/config/: codchi.rs  flake.rs  machine.rs  output.rs
codchi/src/controller/: ipc.rs  mod.rs  tray.rs
codchi/src/ctrl/: cmd.rs  ipc.rs  mod.rs
codchi/src/driver/: mod.rs
codchi/src/gui/: bug_report.rs  machine_creation.rs  machine_inspection.rs  menubar.rs  mod.rs  side_panel.rs
codchi/src/gui/main_panel/: empty_machine_creation.rs  machine_inspection.rs  mod.rs
codchi/src/gui/main_panel/machine_creation/: generics_panel.rs  mod.rs  modules_panel.rs  repository_panel.rs
codchi/src/gui/util/: backend_broker.rs  dialog_manager.rs  mod.rs  status_entries.rs  textures_manager.rs
codchi/src/logging/: mod.rs  nix.rs  output.rs  progress.rs
codchi/src/module/: mod.rs
codchi/src/nix/: mod.rs
codchi/src/platform/: host.rs  machine.rs  mod.rs  store.rs
codchi/src/platform/cmd/: linux.rs  mod.rs  nix.rs
codchi/src/platform/linux/: host.rs  lxd.rs  mod.rs
codchi/src/platform/windows/: host.rs  mod.rs  wsl.rs
codchi/src/tray/: core.rs  mod.rs
codchi/ui/: Cargo.toml
codchi/ui/src/: cmd.rs  main.rs
codchiw/: Cargo.toml
controller/: ctrl-rootfs.nix  default.nix
crates/: Cargo.toml  default.nix  shell.nix
crates/codchi/: Cargo.toml
crates/codchi-gui/: Cargo.toml
crates/codchi-gui/src/: main.rs
crates/codchi-gui/src/gui/: mod.rs
crates/codchi-gui/src/tray/: core.rs  mod.rs
crates/codchi-server/: Cargo.toml
crates/codchi-server/src/: main.rs  server.rs
crates/codchi-server/src/platform/: mod.rs
crates/codchi-server/src/platform/linux-lxd/: mod.rs
crates/codchi/src/: cli.rs  consts.rs  main.rs  module.rs
crates/codchi/src/config/: codchi.rs  flake.rs  machine.rs  mod.rs
crates/codchi/src/logging/: mod.rs  output.rs  progress.rs
crates/codchi/src/platform/: host.rs  machine.rs  mod.rs  store.rs
crates/codchi/src/platform/cmd/: linux.rs  mod.rs  nix.rs
crates/codchi/src/platform/linux/: host.rs  lxd.rs  mod.rs
crates/codchi/src/platform/windows/: host.rs  mod.rs  wsl.rs
crates/codchiw/: Cargo.toml  default.nix
crates/codchiw/src/: main.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  lib.rs  service.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: consts.rs  exe.rs  lib.rs  util.rs
crates/shared/src/config/: codchi.rs  mod.rs
crates/utils/: Cargo.toml  default.nix
crates/utils/src/: ndd.rs
docs/: .gitignore  404.html  app.config.ts  codchifile.md  code-machine.md  flake.nix  index.html  internal.md  module-options.html  nuxt.config.ts  options.html  package-lock.json  package.json  print.html  rspress.config.ts  searchindex.js  searchindex.json
modules/: batteries.nix  default.nix  devenv.nix  docker.nix  java.nix  recommended-config.nix
new/: index.html
nix/: lib.nix  make-tarball.nix  nix-static.nix
opensearch.xml/: index.html
public/: style.css
static/: search_index.060c204a.json  search_index.462d9852.json  search_index.4794096e.json  search_index.52dba6d1.json  search_index.5fdddbdf.json  search_index.7d8e69ab.json  search_index.800158d5.json  search_index.883800ba.json  search_index.90fe6b37.json  search_index.929d84fc.json  search_index.93b27002.json  search_index.9a8837aa.json  search_index.a4461a7c.json  search_index.aea504b4.json  search_index.bd823222.json  search_index.e76600ed.json  search_index.fdb6ea7c.json
tests/: windows.ps1
utils/: Cargo.toml  default.nix
(+644 files in other folders)
