cabal-version: 3.4
name:          codchi
version:       0.1.0.0
license:       MPL-2.0 
author:        aformatik
build-type:    Simple

common shared
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields

  -- -Wredundant-constraints

  default-extensions:
    NoFieldSelectors
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DoAndIfThenElse
    DuplicateRecordFields
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  -- OverloadedRecordUpdate
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  build-depends:
    , base    >=4.15 && <5
    , relude  >=1.0

  default-language:   Haskell2010

executable codchi
  import:        shared

  if os(windows)
    -- other-modules: Codchi.Platform.Windows

    -- /SUBSYSTEM:WINDOWS

    build-depends:
      , Win32
      , Win32-shortcut

  if os(linux)
    other-modules: Codchi.Platform.Linux

  if os(osx)
    other-modules: Codchi.Platform.Darwin

  main-is:       Codchi.hs
  other-modules:
    Codchi.CLI
    Codchi.Config
    Codchi.Dsl
    Codchi.Effects
    Codchi.Nix
    Codchi.Parser
    Codchi.Platform.Linux
    Codchi.Platform.Windows
    Codchi.Types
    Paths_codchi

  --        Codchi.Config
  build-depends:
    , aeson
    , async
    , attoparsec
    , bytestring
    , cleff
    , directory             >=1.3.7.0
    , exceptions
    , filelock
    , monad-logger
    , optparse-applicative
    , path
    , stm
    , template-haskell
    , text
    , text-builder-linear
    , time
    , typed-process
    , unliftio
    , with-utf8

  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
