cabal-version: 3.4
name:          codchi
version:       0.1.3.0
license:       MPL-2.0 
author:        aformatik
build-type:    Simple

common shared
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields

  default-extensions:
    NoFieldSelectors
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DoAndIfThenElse
    DuplicateRecordFields
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  -- OverloadedRecordUpdate
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  other-modules:
    Codchi
    Codchi.CLI
    Codchi.Config
    Codchi.Config.Common
    Codchi.Config.IO
    Codchi.Config.V012
    Codchi.Error
    Codchi.Nix
    Codchi.Parser
    Codchi.Platform
    Codchi.Platform.CodchiMonad
    Codchi.Platform.Windows
    Codchi.Platform.Windows.Internal
    Codchi.Types
    Paths_codchi

  build-depends:
    , aeson
    , aeson-pretty
    , annotated-exception
    , async
    , attoparsec
    , base                  >=4.15 && <5
    , byline
    , bytestring
    , directory
    , exceptions
    , filelock
    , gitrev
    , monad-logger
    , mtl
    , optparse-applicative  ==0.17.0.0
    , path
    , relude                >=1.0
    , rio
    , safe-json
    , stm
    , template-haskell
    , text
    , text-builder
    , time
    , transformers
    , typed-process
    , unliftio
    , with-utf8

  if os(windows)
    -- exposed-modules: Codchi.Platform.Windows
    --    Codchi.Platform.Windows.Internal
    build-depends:
      , Win32
      , Win32-shortcut

  if os(linux)
    other-modules: Codchi.Platform.Linux

  if os(osx)
    other-modules: Codchi.Platform.Darwin

executable codchi
  import:         shared
  hs-source-dirs: app src
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

  if os(windows)
    ld-options: -static

test-suite codchi-tests
  import:             shared
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test src
  main-is:            Spec.hs
  build-depends:      hspec
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
