[package]
name = "codchi"
build = "build.rs"
version = "0.2.2"
edition = "2021"
rust-version = "1.80.0"
resolver = "2"


[profile.release]
lto = true
strip = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.9"
strum = { version = "0.26", features = ["derive"] }
directories = "5"
itertools = "0.13"
lazy-regex = "3.2.0"
base64 = "0.22.1"
clap = { version = "4", features = ["derive", "cargo", "string"] }
clap-verbosity-flag = "2.2.1"
colored = "2.1.0"
comfy-table = "7.1.1"
console = { version = "0.15.8", default-features = false, features = [
    "windows-console-colors",
    "ansi-parsing",
] }
env_logger = "0.11"
freedesktop_entry_parser = "1.3.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
inquire = "0.7.5"
not-so-human-panic = "1.1.5"
num_enum = "0.7.3"
number_prefix = "0.4.0"
petname = { version = "2.0.2", default-features = false, features = [
    "default-rng",
    "default-words",
] }
rustls-native-certs = "0.7.2"
sysinfo = "0.31.2"
thiserror = "1.0"
throttle = "0.1.0"
tray-icon = { git = "https://github.com/htngr/tray-icon.git", default-features = false }
image = { version = "0.25", features = ["png"], default-features = false }
tao = { version = "0.29", default-features = false }
fs4 = { version = "0.9", features = ["sync"] }
git-url-parse = "0.4.4"
toml_edit = { version = "0.22.20", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
indoc = "2.0.5"
nix = { version = "0.29.0", features = ["user", "hostname"] }
which = "6.0.3"

[target.'cfg(windows)'.dependencies]
known-folders = "1.2.0"
mslnk = "0.1.8"
version-compare = "0.2"
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
] }
wslapi = "0.1.3"

[build-dependencies]
clap = { version = "4", features = ["derive", "cargo", "string"] }
clap-verbosity-flag = "2.2.1"
clap_complete = "4.5.22"
clap_mangen = "0.2.23"
embed-manifest = "1.4.0"
log = "0.4"
build-data = "0"
git-url-parse = "0"
lazy-regex = "3.2.0"
