[package]
name = "codchi"
build = "build/main.rs"
version = "0.3.1"
edition = "2021"
rust-version = "1.80.0"
resolver = "2"


[profile.release]
lto = true
strip = true

[features]
nightly = []

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11"
strum = { version = "0.27", features = ["derive"] }
directories = "6"
itertools = "0.14"
lazy-regex = "3.3.0"
# base64 = "0.22.1"
clap = { version = "4", features = ["derive", "cargo", "string"] }
clap_complete_command = { version = "0.6.1", features = ["fig", "carapace"] }
clap-verbosity-flag = "3.0.2"
comfy-table = "7.1.1"
console = { version = "0.15.8", default-features = false, features = [
    "windows-console-colors",
    "ansi-parsing",
] }
env_logger = "0.11"
freedesktop_entry_parser = "1.3.0"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
inquire = "0.7.5"
num_enum = "0.7.3"
number_prefix = "0.4.0"
petname = { version = "2.0.2", default-features = false, features = [
    "default-rng",
    "default-words",
] }
# rustls-native-certs = "0.8.0"
sysinfo = "0.33.1"
thiserror = "2.0"
throttle = "0.1.0"
tray-icon = { version = "0.20", default-features = false }
image = { version = "0.25", features = ["png", "ico"], default-features = false }
tao = { version = "0.32", default-features = false }
fs4 = { version = "0.13", features = ["sync"] }
git-url-parse = { git = "https://github.com/tjtelan/git-url-parse-rs" }
toml_edit = { version = "0.22.22", features = ["serde"] }
which = "7.0.2"
notify-rust = "4.11.3"
human-panic = "2.0.2"
# clap-help = "1.3.0"
# termimad = "0.30.0"
rand = "0.9.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
egui = "0.31.0"
eframe = "0.31.0"
egui_extras = { version = "0.31.0", features = ["default", "image", "svg"] }
rfd = "0.15.3"
usvg = "0.45.1"
resvg = "0.45.1"

[target.'cfg(unix)'.dependencies]
indoc = "2.0.5"
nix = { version = "0.29.0", features = ["user", "hostname"] }

[target.'cfg(windows)'.dependencies]
known-folders = "1.2.0"
mslnk = "0.1.8"
version-compare = "0.2"
windows = { version = "0.60", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_Debug", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Threading"] }
wslapi = "0.1.3"
clap_complete_command = { version = "0.6.1", default-features = false }
uuid = { version = "1.11.0", features = ["v5"] }

[build-dependencies]
clap = { version = "4", features = ["derive", "cargo", "string"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4"
clap_complete_command = { version = "0.6.1", features = ["fig", "carapace"] }
clap_complete_fig = "4"
clap_complete_nushell = "4"
clap_mangen = "0"
embed-manifest = "1.4.0"
log = "0.4"
build-data = "0"
git-url-parse = { git = "https://github.com/tjtelan/git-url-parse-rs" }
lazy-regex = "3.3.0"
duct = "0.13.7"

# [patch.crates-io]
# clap = { git = "https://github.com/htngr/clap" }
# # clap_complete = { git = "https://github.com/htngr/clap" }
# # clap_complete_fig = { git = "https://github.com/htngr/clap" }
# # clap_complete_nushell = { git = "https://github.com/htngr/clap" }
# clap_mangen = { git = "https://github.com/htngr/clap" }
