[workspace]
resolver = "2"
members = [ 
    "codchi", 
    "codchiw", 
    "codchi-server", 
    "codchi-gui", 
    "shared", 
]

[workspace.package]
version = "0.3.1"
edition = "2021"
rust-version = "1.80.0"

[workspace.dependencies]
anyhow = "1"
build-data = "0"
clap = "4"
clap-verbosity-flag = "3.0.2"
clap_complete = "4"
clap_complete_command = "0.6.1"
clap_complete_fig = "4"
clap_complete_nushell = "4"
clap_mangen = "0"
comfy-table = "7.1.1"
console = { version = "0.15.8", default-features = false }
ctrlc = "3.4.5"
directories = "6"
duct = "0.13.7"
eframe = "0.31.0"
egui = "0.31.0"
egui_extras = "0.31.0"
embed-manifest = "1.4.0"
env_logger = "0.11"
freedesktop_entry_parser = "1.3.0"
fs4 = "0.13"
git-url-parse = { git = "https://github.com/tjtelan/git-url-parse-rs" }
human-panic = "2.0.2"
image = { version = "0.25", default-features = false }
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.3"
inquire = "0.7.5"
itertools = "0.14"
lazy-regex = "3.3.0"
log = "0.4"
notify-rust = "4.11.3"
num_enum = "0.7.3"
number_prefix = "0.4.0"
petname = { version = "2.0.2", default-features = false }
rand = "0.9.0"
serde = "1"
serde_json = "1"
serde_with = "3.11"
strum = "0.27"
sysinfo = "0.33.1"
tao = { version = "0.32", default-features = false }
thiserror = "2.0"
throttle = "0.1.0"
toml_edit = "0.22.22"
tray-icon = { version = "0.20", default-features = false }
which = "7.0.2"

[profile.release]
lto = true
strip = true

