[package]
name = "codchi"
build = "build.rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "string"] }
clap-verbosity-flag = "2.1.0"
once_cell = "1.19.0"
strum = { version = "0.25.0", features = ["derive"] }
itertools = "0.12.0"

anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
# human-panic = "1.2.2"
not-so-human-panic = "1.1.5"
comfy-table = "7.1.0"
colored = "2.1.0"

directories = "5.0.1"
# which = "5.0.0"
fs4 = { version = "0.7", features = ["sync"] }
rustls-native-certs = "0.7.0"
base64 = "0.21.7"
petname = { version = "2.0.2", default-features = false, features = ["default-rng", "default-words"] }

# config = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4.0"
serde_json = "1.0"
toml_edit = { version = "0.21.0", features = ["serde"] }
# url = "2.5.0"
git-url-parse = "0.4.4"
lazy-regex = "3.1.0"
# which = "6.0.0"

# tokio = { version = "1.35", features = [ "io-util", "rt-multi-thread" ] }
# futures = "0.3"
# futures-io = { version = "0.3" }

# parity-tokio-ipc = "0.9.0"
# tarpc = { version = "0.34", git = "https://github.com/google/tarpc", features = [ "serde1", "tokio1", "serde-transport", "serde-transport-bincode" ] }

inquire = "0.6.2"
indicatif = "0.17.8"
indicatif-log-bridge = "0.2.2"
freedesktop_entry_parser = "1.3.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["user"] }
indoc = "2.0.5"
# signal-hook = "0.3.17"

# [target.'cfg(target_os = "linux")'.dependencies]
# lxd = "0.1.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [ "Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_Debug", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_Threading" ]}
# win32console = "0.1.5"
wslapi = "0.1.3"
version-compare = "0.1"
# codepage-strings = "1.0.2"
known-folders = "1.1.0"
mslnk = "0.1.8"
sysinfo = "0.30.12"
# winreg = "0.52.0"
# path-slash = "0.2.1"
# ctrlc = "3.4.4"
# wtf8 = "0.1"
# colored = "2.1.0"

[build-dependencies]
clap = { version = "4", features = ["derive", "cargo", "string"] }
clap-verbosity-flag = "2.1.0"
clap_complete = "4.4.4"
clap_mangen = "0.2.15"
build-data = "0"
once_cell = "1.19.0"
url = "2.5.0"
git-url-parse = "0.4.4"
lazy-regex = "3.1.0"
log = "0.4"
strum = { version = "0.25.0", features = ["derive"] }
embed-manifest = "1.4.0"
