[package]
name = "codchi-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
once_cell = "1.19.0"
# strum = { version = "0.25.0", features = ["derive"] }
# itertools = "0.12.0"

dashmap = { version = "5.5.3", features = ["serde"] }

anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
# env_logger = "0.10"
log = "0.4"
# human-panic = "1.2.2"

# directories = "5.0.1"
# which = "5.0.0"

# config = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
# serde_with = "3.4.0"

tokio = { version = "1.35", features = [ "io-util", "rt-multi-thread" ] }
futures = "0.3"
# futures-io = { version = "0.3" }
parity-tokio-ipc = "0.9.0"
tarpc = { version = "0.34", git = "https://github.com/google/tarpc", features = [ "serde1", "tokio1", "serde-transport", "serde-transport-bincode" ] }

tray-icon = { version = "0.11.1", default-features = false }
image = { version = "0.24", features = ["png"], default-features = false }
tao = {version = "0.24.0", default-features = false }

# [target.'cfg(unix)'.dependencies]
# daemonize = "0.5.0"

# [target.'cfg(target_os = "linux")'.dependencies]
# lxd = "0.1.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [ "Win32_System_Threading" ]}
# colored = "2.1.0"
