[package]
name = "codchi-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
remoc.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# tarpc.workspace = true
shared.workspace = true
ipc.workspace = true
# anyhow.workspace = true
tokio.workspace = true
# futures.workspace = true
# rand.workspace = true
