[package]
name = "codchiw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[target.'cfg(windows)'.dependencies]
anyhow = "1"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
