[package]
name = "shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
serde.workspace = true
anyhow.workspace = true
rand.workspace = true
log.workspace = true
toml_edit.workspace = true
fs4.workspace = true
directories.workspace = true

[target.'cfg(windows)'.dependencies]
directories.workspace = true

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[build-dependencies]
build-data.workspace = true
